# libmodal

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  DEVELOPING.md  LICENSE  PUBLISHING.md  README.md  bindings.h  build.rs
.github/workflows/: ci.yaml  docs.yaml
ci/: release.py
libmodal/: Cargo.toml  build.rs
libmodal-proto/: Cargo.toml  build.rs
libmodal-proto/src/: lib.rs
libmodal/src/: client.rs  config.rs  lib.rs  main.rs
modal-go/: .golangci.toml  README.md  app.go  client.go  cls.go  config.go  doc.go  errors.go  function.go  function_call.go  go.mod  go.sum  image.go  invocation.go  modal.go  queue.go  sandbox.go  sandbox_filesystem.go  secret.go  serialization_test.go  volume.go
modal-js/: .gitignore  Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
modal-js/examples/: cls-call.ts  function-call.ts  function-spawn.ts  init-client.ts  main.ts  reliability.ts  reliability2.ts  sandbox-exec.ts  sandbox-filesystem-snapshot.ts  sandbox-filesystem.ts  sandbox-poll.ts  sandbox-private-image.ts  sandbox-secrets.ts  sandbox-tunnels.ts  sandbox-volume.ts  sandbox.ts
modal-js/npm/darwin-arm64/: README.md  package.json
modal-js/npm/darwin-x64/: README.md  package.json
modal-js/npm/freebsd-x64/: README.md  package.json
modal-js/npm/linux-arm64-musl/: README.md  package.json
modal-js/npm/linux-x64-gnu/: README.md  package.json
modal-js/npm/linux-x64-musl/: README.md  package.json
modal-js/npm/win32-arm64-msvc/: README.md  package.json
modal-js/npm/win32-ia32-msvc/: README.md  package.json
modal-js/npm/win32-x64-msvc/: README.md  package.json
modal-js/scripts/: gen-proto.sh
modal-js/src/: app.ts  client.ts  cls.ts  config.ts  errors.ts  function.ts  function_call.ts  image.ts  index.ts  invocation.ts  lib.rs  pickle.test.ts  pickle.ts  queue.ts  sandbox.ts  sandbox_filesystem.ts  secret.ts  streams.ts  volume.ts
modal-js/test/: cls.test.ts  function.test.ts  function_call.test.ts  image.test.ts  queue.test.ts  sandbox.test.ts  sandbox_filesystem_snapshot.test.ts  secret.test.ts  sum.test.ts  volume.test.ts
non-native/: README.md  package-lock.json  package.json  tsconfig.json
src/: ffi.rs  lib.rs  main.rs  proto.rs
test-support/: README.md  libmodal_test_support.py  setup.sh
(+32 files in other folders)
