[package]
name = "libmodal"
version = "0.0.1"
edition = "2024"

[dependencies]
bytes = "1.10.1"
dirs = "6.0.0"
fastrand = "2.3.0"
named-retry = "0.4.0"
prost = "0.13.5"
prost-types = "0.13.5"
reqwest = { version = "0.12.15", features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-pickle = "1.1.1"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
tonic = { version = "0.13.0", features = ["tls-webpki-roots"] }

[build-dependencies]
cbindgen = "0.28.0"
tonic-build = "0.13.0"
