[package]
name = "libmodal"
version = "0.0.1"
edition = "2024"

[dependencies]
bytes = "1.10.1"
dirs = "6.0.0"
fastrand = "2.3.0"
libmodal-proto = { path = "../libmodal-proto" }
named-retry = "0.4.0"
prost.workspace = true
prost-types.workspace = true
reqwest = { version = "0.12.15", features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-pickle = "1.1.1"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
tonic = { workspace = true, features = ["tls-webpki-roots"] }
tracing = "0.1.41"

[build-dependencies]
cbindgen = "0.28.0"
