[package]
name = "modal-js"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.56"
bytes = "1.10.1"
napi = { version = "2.16.17", default-features = false, features = [
    "async",
    "napi9",
] }
napi-derive = "2.16.13"
tokio = { version = "1.44.2", features = ["full"] }

[build-dependencies]
napi-build = "2.0.1"
